--- a/Ferramentas.html
+++ b/Ferramentas.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Ferramentas para Trabalho Colaborativo</h1>
+
+    <p>GitHub é uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git. Ele permite que programadores, utilitários ou qualquer usuário cadastrado na plataforma contribuam em projetos privados e/ou Open Source de qualquer lugar do mundo.A plataforma ajuda os desenvolvedores a armazenar e administrar o código e faz o registro de mudanças.</p>
+    
 </body>
 </html>
